--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   "dependencies": {
     "@types/node": "^13.7.7",
     "@types/socket.io": "^2.1.4",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.1",
     "express": "^4.16.4",
     "nodemon": "^2.0.2",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.8.1-alpha.2",
     "socket.io": "^2.3.0",
     "ts-node": "^8.6.2"
   }
