--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@types/node": "^13.7.7",
     "@types/socket.io": "^2.1.4",
+    "@types/winston": "^2.4.4",
     "express": "^4.16.4",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0",
-    "ts-node": "^8.6.2"
+    "ts-node": "^8.6.2",
+    "winston": "^3.2.1"
   }
 }
