Update ci-windows.yml for Azure Pipelines

--- a/ci-windows.yml
+++ b/ci-windows.yml
@@ -44,6 +44,12 @@ stages:
         Contents: '**'
         TargetFolder: '$(System.DefaultWorkingDirectory)/deploy'
     
+    - task: CmdLine@2
+      inputs:
+        script: |
+          echo some-text  > filelog-error.log
+          echo some-text  > filelog-info.log
+
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
