--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "express": "^4.16.4",
+    "guid-typescript": "^1.0.9",
     "nodemon": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.1-alpha.2",
