--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/node": "^13.7.7",
     "@types/socket.io": "^2.1.4",
     "@types/winston": "^2.4.4",
