--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": true,
-    "outDir": ""
+    "outDir": "dist"
   },
   "exclude": [
     "node_modules",
